# cocotb-pynq

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/cocotbpynq/: __init__.py  buffer.py  dma.py  dut.py  mmio.py  overlay.py  simulator.py
src/cocotbpynq/sample/: __main__.py  adapted.py  cocotb_runner.py  original.py  original_vs_adapted.diff  poly_AXILiteS_s_axi.v  poly_axi.v  sample.hwh
