[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cocotbpynq"
version = "0.0.1"
authors = [
    { name="Gavin Lusby", email="gdplusby@uwaterloo.ca" },
    { name="Nachiket Kapre", email="nachiket@uwaterloo.ca" }
]
license = "GPL-3.0-or-later"
readme="README.md"

description = "A direct substition for PYNQ library, to seamlessly allow simulation of PL region + PS-PL interface"
dependencies = [
    "numpy",
    "cocotb"
]